# backend-test-task-fastapi

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: lint-backend.yml  test-backend.yml  test-docker-compose.yml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 1f3dad62c0ea_add_user_model.py  20b08a42c990_add_slug_field_for_post_and_category_.py  70a85a9823e7_add_is_active_and_role_for_user_model.py  d4ec2ccd19b2_add_new_models_posts_and_categories.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  categories.py  health.py  posts.py  users.py
app/core/: config.py  constants.py  middlewares.py  redis.py  security.py  utils.py
app/db/: crud.py  session.py
app/models/: base.py  category.py  post.py  user.py
app/schemas/: auth.py  category.py  common.py  pagination.py  post.py  user.py
app/services/: category.py  post.py  user.py
scripts/: prestart.sh  tests-start.sh
tests/: conftest.py
tests/api/: test_auth.py  test_categories.py  test_posts.py  test_users.py
tests/services/: test_category_service.py  test_post_service.py  test_user_service.py
